--- a/intro-js.html
+++ b/intro-js.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <script src="Script/intro.js"></script>
+    <div>
+        <label for="nom">Votre nom</label>
+        <input type="text" id="nom" />
+    </div>
+    <span id="result"></span>
+
+    <script src="script/intro.js"></script>
 </body>
 </html>
