--- a/intro-js.html
+++ b/intro-js.html
@@ -10,8 +10,10 @@
     <div>
         <label for="nom">Votre nom</label>
         <input type="text" id="nom" />
+        <button id="go">Go</button>
     </div>
-    <span id="result"></span>
+    <div id="result"></div>
+    <div id="hello"></div>
 
     <script src="script/intro.js"></script>
 </body>
