--- a/modal.html
+++ b/modal.html
@@ -10,18 +10,33 @@
 <body>
     <button type="button" id="open-modal">Cliquer ici</button>
 
-    <!--
-    <div class="modal">
+    <div class="modal"
+        id="modal" style="display: none">
         <div class="modal-header">
-            <button type="button">&times;</button>
+            <button type="button"
+                class="close">&times;</button>
         </div>
         <div class="modal-content">Contenu</div>
         <div class="modal-footer">
-            <button type="button">Annuler</button>
-            <button type="button">Confirmer</button>
+            <button type="button"
+                class="cancel">Annuler</button>
+            <button type="button"
+                class="confirm">Confirmer</button>
         </div>
     </div>
-    -->
+
+    <template id="modalTemplate">
+        <div class="modal">
+            <div class="modal-header">
+                <button type="button">&times</button>
+            </div>
+            <div class="modal-content">Contenu</div>
+            <div class="modal-footer">
+                <button type="button">Annuler</button>
+                <button type="button">Confirmer</button>
+            </div>
+        </div>
+    </template>
 
     <script src="./script/modal.js"></script>    
 </body>
